--- a/src/scss/slider2.scss
+++ b/src/scss/slider2.scss
@@ -509,6 +509,7 @@ section.tab-navigation {
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
         // height: 30px;
+        width: 100px;
         max-width: 100px;
         white-space: nowrap;
         text-overflow: ellipsis;
