--- a/src/scss/e-shop.scss
+++ b/src/scss/e-shop.scss
@@ -13,6 +13,7 @@ section.shipping-time {
   }
 
   div.owl-nav {
+
     button.owl-prev,
     button.owl-next {
       position: absolute;
@@ -83,6 +84,7 @@ section.shipping-time {
               font-weight: 600;
               font-size: 1.1rem;
             }
+
             h5.holiday {
               color: rgba($color: $color-error, $alpha: 1);
             }
@@ -101,12 +103,12 @@ section.shipping-time {
                 text-align: center;
                 width: 140px;
 
-                &:nth-child(1) > label.shipping-time-hour-list-label {
+                &:nth-child(1)>label.shipping-time-hour-list-label {
                   border-top-right-radius: 8px;
                   border-bottom-right-radius: 8px;
                 }
 
-                &:last-child > label.shipping-time-hour-list-label {
+                &:last-child>label.shipping-time-hour-list-label {
                   border-top-left-radius: 8px;
                   border-bottom-left-radius: 8px;
                 }
@@ -114,20 +116,15 @@ section.shipping-time {
                 input[name="shipping-time-input"] {
                   display: none;
 
-                  &:checked + label.shipping-time-hour-list-label {
+                  &:checked+label.shipping-time-hour-list-label {
                     border: 3px solid rgba($color: $color-selected, $alpha: 1);
-                    box-shadow: 0 8px 13px -8px rgba($color: $color-selected, $alpha:
-                          0.3);
-                    background-color: rgba(
-                      $color: $color-selected,
-                      $alpha: 0.03
-                    );
+                    box-shadow: 0 8px 13px -8px rgba($color: $color-selected, $alpha: 0.3);
+                    background-color: rgba($color: $color-selected,
+                        $alpha: 0.03);
                     cursor: default;
                   }
 
-                  &:checked
-                    + label.shipping-time-hour-list-label
-                    > span.shipping-time__hour-list-scope {
+                  &:checked+label.shipping-time-hour-list-label>span.shipping-time__hour-list-scope {
                     color: rgba($color: $color-selected, $alpha: 1);
                   }
                 }
