--- a/src/css/common.css
+++ b/src/css/common.css
@@ -34,12 +34,13 @@ body .container-fluid {
 button.view-all {
   background-color: #4a1f61;
   border: 0;
-  padding: 0.375rem;
+  padding: 0.35rem;
   border-radius: 4px;
   color: white;
-  width: 100px;
+  width: 140px;
   font-family: "Samim";
   margin: 2rem 0;
+  font-size: 90%;
 }
 
 section.single-advertising-section {
