--- a/src/css/dolatsara.css
+++ b/src/css/dolatsara.css
@@ -31,6 +31,209 @@ body .container-fluid {
   margin: 0;
 }
 
+section.dolatsara__main-header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  margin: 2rem 0;
+  height: 100vh;
+  margin-top: 0;
+  justify-content: space-between;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 1rem 2rem;
+  background: rgba(184, 184, 184, 0.25);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button {
+  background-color: rgba(184, 184, 184, 0.5);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button:focus {
+  border: rgba(0, 0, 0, 0.2);
+  outline: 0;
+  box-shadow: none;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu button.dolatsara__toggle-button span.navbar-toggler-icon {
+  color: #b8b8b8;
+  height: max-content;
+  padding-bottom: .2rem;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul li.dolatsara__menu-item a {
+  color: #4a1f61;
+  font-weight: 600;
+  font-size: 80%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu {
+  display: flex;
+  align-items: center;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__setting-button {
+  background: transparent;
+  border: 0;
+  border-right: 1px solid #4a1f61;
+  padding: 0;
+  margin-right: 1rem;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__setting-button svg,
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__setting-button i {
+  margin-right: 1rem;
+  color: #4a1f61;
+  width: 40px;
+  height: 40px;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone {
+  color: #4a1f61;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone strong {
+  font-size: 18px;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone small {
+  font-weight: 500;
+  font-size: 14px;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-tabs {
+  height: 25px;
+  padding-right: 1rem;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-tabs a.dolatsara__tabs-link {
+  color: #4a1f61;
+  text-decoration: none;
+  border-top-right-radius: 8px;
+  font-size: 14px;
+  padding: .375rem .5rem;
+  box-shadow: 0 0 4px #b8b8b8;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box {
+  display: flex;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form {
+  position: relative;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form input.dolatsara__search-input {
+  font-size: 14px;
+  color: #4a1f61;
+  border: 1px solid #b8b8b8;
+  background: #eeeeee;
+  padding: .65rem 1rem .65rem 2rem;
+  border-top-right-radius: 28px;
+  border-bottom-right-radius: 28px;
+  width: 450px;
+  height: 45px;
+  direction: rtl;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form input.dolatsara__search-input::placeholder {
+  font-size: 12px;
+  color: #b8b8b8;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__search-button {
+  position: absolute;
+  left: .5rem;
+  top: 12px;
+  background: transparent;
+  border: 0;
+  padding: 0;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__search-button svg.search-icon,
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__search-button i.search-icon {
+  color: #b8b8b8;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__instant-ads-button {
+  font-size: 14px;
+  color: #4a1f61;
+  border: 1px solid #b8b8b8;
+  background: rgba(151, 151, 151, 0.75);
+  padding: .65rem;
+  border-top-left-radius: 28px;
+  border-bottom-left-radius: 28px;
+  height: 45px;
+  font-weight: 600;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.image-placeholder {
+  width: 210px;
+  height: 70px;
+  margin-bottom: 2rem;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content div.image-placeholder img {
+  width: 100%;
+  height: 100%;
+}
+
+section.dolatsara__main-header div.dolatsara__main-content h2.dolatsara__title-placeholder-title {
+  color: #4a1f61;
+  margin-bottom: 2rem;
+}
+
+section.dolatsara__main-header div.dolatsara__box-icons {
+  background: rgba(184, 184, 184, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1.5rem;
+  width: 100%;
+}
+
+section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder {
+  width: 45px;
+  height: 45px;
+  text-decoration: none;
+  color: #4a1f61;
+  margin: .5rem .75rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder:active {
+  color: #4a1f61;
+}
+
+section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder i,
+section.dolatsara__main-header div.dolatsara__box-icons a.dolatsara__icon-placehlder svg {
+  font-size: 24px;
+  width: 32px;
+  height: 32px;
+}
+
 section.dolatsara-slider-section {
   display: flex;
   align-items: center;
