--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -1,5 +1,223 @@
 @import "./base";
 
+section.dolatsara__main-header {
+  @include section-style();
+  height: 100vh;
+  margin-top: 0;
+  justify-content: space-between;
+
+  div.dolatsara__all-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 1rem 2rem;
+    background: rgba($color: $color-gray-4, $alpha: .25);
+
+    nav.dolatsara__right-menu {
+      button.dolatsara__toggle-button {
+        background-color: rgba($color: $color-gray-4, $alpha: .5);
+
+        &:focus {
+          border: rgba($color: $color-dark, $alpha: 0.2);
+          outline: 0;
+          box-shadow: none;
+        }
+
+        span.navbar-toggler-icon {
+          color: rgba($color: $color-gray-4, $alpha: 1);
+          height: max-content;
+          padding-bottom: .2rem;
+        }
+      }
+
+      div#dolatsara__menu-list {
+        ul {
+          li.dolatsara__menu-item {
+            a {
+              color: rgba($color: $color-purple, $alpha: 1);
+              font-weight: 600;
+              font-size: 80%;
+              padding-left: 1rem;
+              padding-right: 1rem;
+            }
+          }
+        }
+      }
+    }
+
+    div.dolatsara__left-menu {
+      display: flex;
+      align-items: center;
+
+
+      button.dolatsara__setting-button {
+        background: transparent;
+        border: 0;
+        border-right: 1px solid rgba($color: $color-purple, $alpha: 1);
+        padding: 0;
+        margin-right: 1rem;
+
+        svg,
+        i {
+          margin-right: 1rem;
+          color: rgba($color: $color-purple, $alpha: 1);
+          width: 40px;
+          height: 40px;
+        }
+      }
+
+      a.dolatsara__phone {
+        color: rgba($color: $color-purple, $alpha: 1);
+        font-weight: 600;
+        text-decoration: none;
+
+        strong {
+          font-size: 18px;
+        }
+
+        small {
+          font-weight: 500;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
+
+  div.dolatsara__main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    div.dolatsar__seacrh-tabs {
+      height: 25px;
+      padding-right: 1rem;
+
+      a.dolatsara__tabs-link {
+        color: rgba($color: $color-purple, $alpha: 1);
+        text-decoration: none;
+        border-top-right-radius: 8px;
+        font-size: 14px;
+        padding: .375rem .5rem;
+        box-shadow: 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
+
+      }
+    }
+
+    div.dolatsara__forms-box {
+      display: flex;
+
+      form {
+        position: relative;
+
+        input.dolatsara__search-input {
+          font-size: 14px;
+          color: rgba($color: $color-purple, $alpha: 1);
+          border: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+          background: rgba($color: $color-gray, $alpha: 1);
+          padding: .65rem 1rem .65rem 2rem;
+          border-top-right-radius: 28px;
+          border-bottom-right-radius: 28px;
+          width: 450px;
+          height: 45px;
+          direction: rtl;
+
+          &::placeholder {
+            font-size: 12px;
+            color: rgba($color: $color-gray-4, $alpha: 1);
+          }
+
+        }
+
+        button.dolatsara__search-button {
+          position: absolute;
+          left: .5rem;
+          top: 12px;
+          background: transparent;
+          border: 0;
+          padding: 0;
+
+          svg.search-icon,
+          i.search-icon {
+            color: rgba($color: $color-gray-4, $alpha: 1);
+
+          }
+
+        }
+
+        button.dolatsara__instant-ads-button {
+          font-size: 14px;
+          color: rgba($color: $color-purple, $alpha: 1);
+          border: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+          background: rgba($color: $color-gray-2, $alpha: .75);
+          padding: .65rem;
+          border-top-left-radius: 28px;
+          border-bottom-left-radius: 28px;
+          height: 45px;
+          font-weight: 600;
+
+        }
+      }
+
+    }
+
+    div.image-placeholder {
+      width: 210px;
+      height: 70px;
+      margin-bottom: 2rem;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    h2.dolatsara__title-placeholder-title {
+      color: rgba($color: $color-purple, $alpha: 1);
+      margin-bottom: 2rem;
+    }
+
+  }
+
+  div.dolatsara__box-icons {
+    background: rgba($color: $color-gray-4, $alpha: .5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1.5rem;
+    width: 100%;
+
+
+    a.dolatsara__icon-placehlder {
+      width: 45px;
+      height: 45px;
+      text-decoration: none;
+      color: rgba($color: $color-purple, $alpha: 1);
+      margin: .5rem .75rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &:active {
+        color: rgba($color: $color-purple, $alpha: 1);
+      }
+
+      i,
+      svg {
+        font-size: 24px;
+        width: 32px;
+        height: 32px;
+      }
+
+    }
+
+  }
+}
+
 section.dolatsara-slider-section {
   @include section-style;
   margin: 0;
