--- a/src/css/dolatsara.css
+++ b/src/css/dolatsara.css
@@ -14,6 +14,20 @@
   src: url(../fonts/samim/Farsi-Digits/Samim-FD.eot) format("embedded-opentype"), url(../fonts/samim/Farsi-Digits/Samim-FD.woff2) format("woff2"), url(../fonts/samim/Farsi-Digits/Samim-FD.woff) format("woff"), url(../fonts/samim/Farsi-Digits/Samim-FD.ttf) format("truetype");
 }
 
+html ::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+html ::-webkit-scrollbar-thumb {
+  background: rgba(151, 151, 151, 0.2);
+  border-radius: 10px;
+}
+
+html ::-webkit-scrollbar-thumb:hover {
+  background: rgba(151, 151, 151, 0.75);
+}
+
 body {
   font-family: 'Samim';
   background-color: #fff;
@@ -68,7 +82,7 @@ section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu
   padding-bottom: .2rem;
 }
 
-section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul li.dolatsara__menu-item a {
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item a {
   color: #4a1f61;
   font-weight: 600;
   font-size: 80%;
@@ -76,31 +90,145 @@ section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu
   padding-right: 1rem;
 }
 
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item svg {
+  margin-right: .375rem;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu {
+  margin-top: 0;
+  padding: 0;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu li.dolatsara__sub-menu-item {
+  text-align: right;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu li.dolatsara__sub-menu-item a {
+  padding: .5rem;
+  font-size: 80%;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu li.dolatsara__sub-menu-item a:focus {
+  outline: 0;
+  background-color: transparent;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu nav.dolatsara__right-menu div#dolatsara__menu-list ul.dolatsara__menu li.dolatsara__menu-item ul.dolatsara__sub-menu li.dolatsara__sub-menu-item a:hover {
+  background-color: rgba(74, 31, 97, 0.15);
+}
+
 section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu {
   display: flex;
   align-items: center;
 }
 
-section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__setting-button {
-  background: transparent;
-  border: 0;
-  border-right: 1px solid #4a1f61;
-  padding: 0;
-  margin-right: 1rem;
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__city-button {
+  all: unset;
+  color: rgba(0, 0, 0, 0.35);
+  background-color: rgba(184, 184, 184, 0.25);
+  border-radius: 8px;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  padding: .5rem;
 }
 
-section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__setting-button svg,
-section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__setting-button i {
-  margin-right: 1rem;
-  color: #4a1f61;
-  width: 40px;
-  height: 40px;
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__city-button:hover {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu button.dolatsara__city-button i {
+  font-size: 14px;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal div.modal-header {
+  display: block;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal div.modal-header h5 {
+  margin-bottom: 1rem;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal div.modal-header span {
+  color: rgba(151, 151, 151, 0.75);
+  font-size: 14px;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body {
+  position: relative;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body input.dolatsara__search-city {
+  padding-right: 2rem;
+  width: 100%;
+  height: 45px;
+  border-radius: 4px;
+  border: 0;
+  background-color: rgba(151, 151, 151, 0.1);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body svg {
+  padding: 0 .375rem 0 0;
+  position: absolute;
+  right: 1rem;
+  top: 1.5rem;
+  font-size: 28px;
+  color: rgba(184, 184, 184, 0.5);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item {
+  padding: 1rem .5rem;
+  border-bottom: 1px solid rgba(151, 151, 151, 0.2);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer {
+  border: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer button {
+  all: unset;
+  padding: .5rem .375rem;
+  text-align: center;
+  border-radius: 4px;
+  background-color: rgba(238, 238, 238, 0.5);
+  border: 1px solid rgba(238, 238, 238, 0.15);
+  width: 45%;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer button:hover {
+  background-color: rgba(238, 238, 238, 0.9);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer button.dolatsara__confirm-button {
+  border: 1px solid rgba(74, 31, 97, 0.7);
+  background-color: rgba(74, 31, 97, 0.9);
+  color: white;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-footer button.dolatsara__confirm-button:hover {
+  background-color: #4a1f61;
 }
 
 section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone {
   color: #4a1f61;
   font-weight: 600;
   text-decoration: none;
+  margin-right: .5rem;
 }
 
 section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone strong {
@@ -112,12 +240,82 @@ section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu 
   font-size: 14px;
 }
 
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list {
+  position: relative;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button {
+  background: transparent;
+  border: 0;
+  border-right: 1px solid #4a1f61;
+  padding: 0;
+  margin-right: 1rem;
+  display: flex;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button svg,
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button i {
+  margin-right: 1rem;
+  color: #4a1f61;
+  width: 40px;
+  height: 40px;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons {
+  padding: 0;
+  margin-top: 0;
+  transform: translate3d(-8px, 48px, 0px) !important;
+  width: 350px;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row {
+  padding: 0;
+  margin: 0;
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li {
+  width: 90px;
+  height: 90px;
+  display: flex;
+  border-radius: 12px;
+  margin: .5rem;
+  background-color: rgba(184, 184, 184, 0.1);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li:hover {
+  background-color: rgba(184, 184, 184, 0.25);
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 14px;
+  padding: 0;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a:focus {
+  outline: 0;
+  background-color: transparent;
+  color: black;
+}
+
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list ul.dolatsara__setting-list-icons div.row li a svg {
+  width: 50px;
+  height: 50px;
+  color: #4a1f61;
+}
+
 section.dolatsara__main-header div.dolatsara__main-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
+  padding: 1rem;
 }
 
 section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-tabs {
@@ -136,6 +334,8 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-
 
 section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box {
   display: flex;
+  width: 90%;
+  max-width: 600px;
 }
 
 section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form {
@@ -150,8 +350,8 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-
   padding: .65rem 1rem .65rem 2rem;
   border-top-right-radius: 28px;
   border-bottom-right-radius: 28px;
-  width: 450px;
-  height: 45px;
+  width: 420px;
+  height: 50px;
   direction: rtl;
 }
 
@@ -182,8 +382,9 @@ section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-
   padding: .65rem;
   border-top-left-radius: 28px;
   border-bottom-left-radius: 28px;
-  height: 45px;
+  height: 50px;
   font-weight: 600;
+  width: 120px;
 }
 
 section.dolatsara__main-header div.dolatsara__main-content div.image-placeholder {
