--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -32,7 +32,7 @@ section.dolatsara__main-header {
       }
 
       div#dolatsara__menu-list {
-        ul {
+        ul.dolatsara__menu {
           li.dolatsara__menu-item {
             a {
               color: rgba($color: $color-purple, $alpha: 1);
@@ -40,6 +40,34 @@ section.dolatsara__main-header {
               font-size: 80%;
               padding-left: 1rem;
               padding-right: 1rem;
+            }
+
+            svg {
+              margin-right: .375rem;
+            }
+
+            ul.dolatsara__sub-menu {
+              margin-top: 0;
+              padding: 0;
+
+              li.dolatsara__sub-menu-item {
+                text-align: right;
+
+
+                a {
+                  padding: .5rem;
+                  font-size: 80%;
+
+                  &:focus {
+                    outline: 0;
+                    background-color: transparent;
+                  }
+
+                  &:hover {
+                    background-color: rgba($color: $color-purple, $alpha: 0.15);
+                  }
+                }
+              }
             }
           }
         }
@@ -50,27 +78,120 @@ section.dolatsara__main-header {
       display: flex;
       align-items: center;
 
+      button.dolatsara__city-button {
+        all: unset;
+        color: rgba($color: $color-dark, $alpha: 0.35);
+        background-color: rgba($color: $color-gray-4, $alpha: .25);
+        border-radius: 8px;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+        padding: .5rem;
 
-      button.dolatsara__setting-button {
-        background: transparent;
-        border: 0;
-        border-right: 1px solid rgba($color: $color-purple, $alpha: 1);
-        padding: 0;
-        margin-right: 1rem;
-
-        svg,
-        i {
-          margin-right: 1rem;
-          color: rgba($color: $color-purple, $alpha: 1);
-          width: 40px;
-          height: 40px;
+        &:hover {
+          color: rgba($color: $color-dark, $alpha: .7);
         }
+
+        i {
+          font-size: 14px;
+        }
+      }
+
+      div.dolatsara__city-modal {
+        div.modal-header {
+          display: block;
+
+          h5 {
+            margin-bottom: 1rem;
+          }
+
+          span {
+            color: rgba($color: $color-gray-2, $alpha: .75);
+            font-size: 14px;
+          }
+        }
+
+        form.dolatsara__city-modal-form {
+          div.modal-body {
+            position: relative;
+
+            input.dolatsara__search-city {
+              padding-right: 2rem;
+              width: 100%;
+              height: 45px;
+              border-radius: 4px;
+              border: 0;
+              background-color: rgba($color: $color-gray-2, $alpha: 0.1);
+
+            }
+
+            svg {
+              padding: 0 .375rem 0 0;
+              position: absolute;
+              right: 1rem;
+              top: 1.5rem;
+              font-size: 28px;
+              color: rgba($color: $color-gray-4, $alpha: .5);
+            }
+
+            ul.dolatsara__city-list {
+              max-height: 300px;
+              overflow-y: auto;
+
+              li.dolatsara__city-list-item {
+                padding: 1rem .5rem;
+                border-bottom: 1px solid rgba($color: $color-gray-2, $alpha: 0.2);
+
+                label {
+                  width: 100%;
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                }
+              }
+            }
+          }
+
+          div.modal-footer {
+            border: 0;
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+
+            button {
+              all: unset;
+              padding: .5rem .375rem;
+              text-align: center;
+              border-radius: 4px;
+              background-color: rgba($color: $color-gray, $alpha: 0.5);
+              border: 1px solid rgba($color: $color-gray, $alpha: 0.15);
+              width: 45%;
+
+              &:hover {
+                background-color: rgba($color: $color-gray, $alpha: .9);
+              }
+
+            }
+
+            button.dolatsara__confirm-button {
+              border: 1px solid rgba($color: $color-purple, $alpha: .7);
+              background-color: rgba($color: $color-purple, $alpha: .9);
+              color: rgba($color: $color-light, $alpha: 1);
+
+              &:hover {
+                background-color: rgba($color: $color-purple, $alpha: 1);
+              }
+            }
+          }
+        }
+
       }
 
       a.dolatsara__phone {
         color: rgba($color: $color-purple, $alpha: 1);
         font-weight: 600;
         text-decoration: none;
+        margin-right: .5rem;
 
         strong {
           font-size: 18px;
@@ -79,6 +200,75 @@ section.dolatsara__main-header {
         small {
           font-weight: 500;
           font-size: 14px;
+        }
+      }
+
+      div.dolatsara__setting-list {
+        position: relative;
+
+        button.dolatsara__setting-button {
+          background: transparent;
+          border: 0;
+          border-right: 1px solid rgba($color: $color-purple, $alpha: 1);
+          padding: 0;
+          margin-right: 1rem;
+          display: flex;
+
+          svg,
+          i {
+            margin-right: 1rem;
+            color: rgba($color: $color-purple, $alpha: 1);
+            width: 40px;
+            height: 40px;
+          }
+        }
+
+        ul.dolatsara__setting-list-icons {
+          padding: 0;
+          margin-top: 0;
+          transform: translate3d(-8px, 48px, 0px) !important;
+          width: 350px;
+
+          div.row {
+            padding: 0;
+            margin: 0;
+            max-height: 300px;
+            overflow-y: auto;
+
+            li {
+              width: 90px;
+              height: 90px;
+              display: flex;
+              border-radius: 12px;
+              margin: .5rem;
+              background-color: rgba($color: $color-gray-4, $alpha: .1);
+
+              &:hover {
+                background-color: rgba($color: $color-gray-4, $alpha: .25);
+              }
+
+              a {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-evenly;
+                font-size: 14px;
+                padding: 0;
+
+                &:focus {
+                  outline: 0;
+                  background-color: transparent;
+                  color: rgba($color: $color-dark, $alpha: 1);
+                }
+
+                svg {
+                  width: 50px;
+                  height: 50px;
+                  color: rgba($color: $color-purple, $alpha: 1);
+                }
+              }
+            }
+          }
         }
       }
     }
@@ -91,6 +281,7 @@ section.dolatsara__main-header {
     align-items: center;
     justify-content: center;
     width: 100%;
+    padding: 1rem;
 
     div.dolatsar__seacrh-tabs {
       height: 25px;
@@ -109,6 +300,8 @@ section.dolatsara__main-header {
 
     div.dolatsara__forms-box {
       display: flex;
+      width: 90%;
+      max-width: 600px;
 
       form {
         position: relative;
@@ -121,8 +314,9 @@ section.dolatsara__main-header {
           padding: .65rem 1rem .65rem 2rem;
           border-top-right-radius: 28px;
           border-bottom-right-radius: 28px;
-          width: 450px;
-          height: 45px;
+          width: 420px;
+          // width: 90%;
+          height: 50px;
           direction: rtl;
 
           &::placeholder {
@@ -143,7 +337,6 @@ section.dolatsara__main-header {
           svg.search-icon,
           i.search-icon {
             color: rgba($color: $color-gray-4, $alpha: 1);
-
           }
 
         }
@@ -156,9 +349,9 @@ section.dolatsara__main-header {
           padding: .65rem;
           border-top-left-radius: 28px;
           border-bottom-left-radius: 28px;
-          height: 45px;
+          height: 50px;
           font-weight: 600;
-
+          width: 120px;
         }
       }
 
