--- a/src/css/dolatsara.css
+++ b/src/css/dolatsara.css
@@ -163,8 +163,7 @@ section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu 
   width: 100%;
   height: 45px;
   border-radius: 4px;
-  border: 0;
-  background-color: rgba(151, 151, 151, 0.1);
+  border: 1px solid rgba(151, 151, 151, 0.5);
 }
 
 section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body svg {
@@ -182,11 +181,15 @@ section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu 
 }
 
 section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item {
-  padding: 1rem .5rem;
   border-bottom: 1px solid rgba(151, 151, 151, 0.2);
 }
 
+section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item:hover {
+  background-color: rgba(151, 151, 151, 0.1);
+}
+
 section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__city-modal form.dolatsara__city-modal-form div.modal-body ul.dolatsara__city-list li.dolatsara__city-list-item label {
+  padding: 1rem .5rem;
   width: 100%;
   display: flex;
   align-items: center;
