--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -120,8 +120,7 @@ section.dolatsara__main-header {
               width: 100%;
               height: 45px;
               border-radius: 4px;
-              border: 0;
-              background-color: rgba($color: $color-gray-2, $alpha: 0.1);
+              border: 1px solid rgba($color: $color-gray-2, $alpha: 0.5);
 
             }
 
@@ -139,10 +138,14 @@ section.dolatsara__main-header {
               overflow-y: auto;
 
               li.dolatsara__city-list-item {
-                padding: 1rem .5rem;
                 border-bottom: 1px solid rgba($color: $color-gray-2, $alpha: 0.2);
 
+                &:hover {
+                  background-color: rgba($color: $color-gray-2, $alpha: 0.1);
+                }
+
                 label {
+                  padding: 1rem .5rem;
                   width: 100%;
                   display: flex;
                   align-items: center;
