--- a/src/scss/medias/mediaDolatsara.scss
+++ b/src/scss/medias/mediaDolatsara.scss
@@ -437,6 +437,10 @@
         }
       }
     }
+
+    div.dolatsara__box-icons {
+      padding: 1rem 0;
+    }
   }
 
   section.best-categorie-icon {
