--- a/src/css/mediaCommon.css
+++ b/src/css/mediaCommon.css
@@ -6,7 +6,8 @@
 
 @media (max-width: 768px) {
   section.several-advertising-section {
-    grid-template-columns: 100%;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
     grid-gap: 0;
   }
   section.space-section h3.space-section-title {
