--- a/src/css/mediaDolatsara.css
+++ b/src/css/mediaDolatsara.css
@@ -33,7 +33,8 @@ body {
   background-color: #fff;
   font-size: 100%;
   direction: rtl;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body a:focus {
@@ -46,18 +47,19 @@ body .container-fluid {
 }
 
 @media (max-width: 991px) {
-  section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-tabs {
-    display: none;
-  }
   section.dolatsara-slider-section {
     padding: 0 1rem;
     width: calc(100% - 2rem);
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide {
+    height: -webkit-max-content;
+    height: -moz-max-content;
     height: max-content;
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent {
     padding: 1rem 2rem;
+    height: -webkit-max-content;
+    height: -moz-max-content;
     height: max-content;
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent div.card-body-slider {
@@ -89,6 +91,8 @@ body .container-fluid {
     padding: 0.375rem 0;
   }
   section.several-row-slider {
+    height: -webkit-max-content;
+    height: -moz-max-content;
     height: max-content;
   }
   section.several-row-slider div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide .slide-item-parent .image-placeholder {
@@ -106,22 +110,35 @@ body .container-fluid {
   }
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-prev,
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-next {
-    transform: scale(1.025);
+    -webkit-transform: scale(1.025);
+            transform: scale(1.025);
   }
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-active {
-    transform: scale(1.18);
+    -webkit-transform: scale(1.18);
+            transform: scale(1.18);
   }
   section.tab-navigation {
     display: none;
   }
   section.dropdown-section {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     margin: 2rem 0;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     margin: 0;
   }
   section.dropdown-section .dropdown-section__parent {
@@ -130,12 +147,18 @@ body .container-fluid {
   }
   section.dropdown-section .dropdown-section__parent:hover > ul,
   section.dropdown-section .dropdown-section__parent:focus > ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   section.dropdown-section .dropdown-section__parent:hover > div > svg,
   section.dropdown-section .dropdown-section__parent:focus > div > svg {
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    -webkit-transition: -webkit-transform 0.35s ease-in-out;
+    transition: -webkit-transform 0.35s ease-in-out;
     transition: transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out, -webkit-transform 0.35s ease-in-out;
     color: rgba(0, 0, 0, 0.5);
   }
   section.dropdown-section .dropdown-section__parent:hover > div > button,
@@ -144,9 +167,15 @@ body .container-fluid {
     font-weight: 600;
   }
   section.dropdown-section .dropdown-section__button-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 100%;
     color: #b8b8b8;
     background: #eeeeee;
@@ -164,12 +193,20 @@ body .container-fluid {
   }
   section.dropdown-section .dropdown-section__button-box svg {
     font-size: 24px;
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: -webkit-transform 0.35s ease-in-out;
+    transition: -webkit-transform 0.35s ease-in-out;
     transition: transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out, -webkit-transform 0.35s ease-in-out;
   }
   section.dropdown-section ul.dropdown-section__list {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
+    -webkit-transition: display 0.3s ease-in;
     transition: display 0.3s ease-in;
     display: none;
   }
@@ -206,23 +243,29 @@ body .container-fluid {
 
 @media (max-width: 768px) {
   section.dolatsara-slider-section {
+    height: -webkit-max-content;
+    height: -moz-max-content;
     height: max-content;
   }
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide,
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-prev,
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-next,
   section.dolatsara-slider-section div.dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-active {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-prev,
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-next {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   section.album-slider .dolatsara-slider div.swiper div.swiper-wrapper div.swiper-slide-active {
-    transform: scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
   section.banner-content {
     display: none;
@@ -231,25 +274,47 @@ body .container-fluid {
     display: none;
   }
   section.best-categorie-icon {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     margin: 2rem 0;
     margin: 0;
   }
   section.best-categorie-icon .icon-box-parent {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     width: 90%;
     border-bottom: 1px solid #b8b8b8;
   }
   section.best-categorie-icon .icon-box-parent .icon-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     margin: 2rem 0;
     background-color: #4a1f61;
@@ -264,48 +329,12 @@ body .container-fluid {
 }
 
 @media (max-width: 576px) {
-  section.dolatsara__main-header div.dolatsara__all-menu {
-    padding: .5rem;
-  }
-  section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone {
-    width: 100px;
-    text-align: left;
-  }
-  section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu a.dolatsara__phone strong {
-    font-size: 1rem;
-  }
-  section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button {
-    margin-right: .5rem;
-    width: 55px;
-  }
-  section.dolatsara__main-header div.dolatsara__all-menu div.dolatsara__left-menu div.dolatsara__setting-list button.dolatsara__setting-button svg {
-    margin-right: .5rem;
-  }
-  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form input.dolatsara__search-input {
-    width: 300px;
-  }
-  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__instant-ads-button {
-    width: 100px;
-    font-size: 12px;
-  }
-  section.dolatsara__main-header div.dolatsara__box-icons {
-    padding: 1rem 0;
-  }
   section.best-categorie-icon .icon-box-parent .icon-box {
     width: 45px;
     height: 45px;
   }
   section.best-categorie-icon .icon-box-parent .icon-box .icon-category {
     font-size: 1rem;
-  }
-}
-
-@media (max-width: 425px) {
-  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form input.dolatsara__search-input {
-    width: 200px;
-  }
-  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__instant-ads-button {
-    width: 80px;
   }
 }
 /*# sourceMappingURL=mediaDolatsara.css.map */
