--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -4,6 +4,7 @@ $color-light:#fff;
 $color-light-2:#faf6fb;
 $color-gray:#eeeeee;
 $color-gray-2:#979797;
+$color-gray-2-2:#ADB0B3;
 $color-gray-3:#3e3f3f;
 $color-error:#ef5662;
 $color-dark:#000000;
