--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -1,5 +1,145 @@
 @import "./base";
 
+
+section.dolatsara__main-header {
+  @include section-style();
+  height: calc(100vh - 72px);
+  margin-top: 0;
+  // justify-content: space-evenly;
+  position: relative;
+
+  div.dolatsara__main-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1rem;
+
+    div.dolatsar__seacrh-tabs {
+      height: 25px;
+      padding-right: 1rem;
+
+      a.dolatsara__tabs-link {
+        color: rgba($color: $color-purple, $alpha: 1);
+        text-decoration: none;
+        border-top-right-radius: 8px;
+        font-size: 14px;
+        padding: 0.375rem 0.5rem;
+        box-shadow: 0 0 4px rgba($color: $color-gray-4, $alpha: 1);
+      }
+    }
+
+    div.dolatsara__forms-box {
+      display: flex;
+      width: 90%;
+      max-width: 600px;
+
+      form {
+        position: relative;
+
+        input.dolatsara__search-input {
+          font-size: 14px;
+          color: rgba($color: $color-purple, $alpha: 1);
+          border: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+          background: rgba($color: $color-gray, $alpha: 1);
+          padding: 0.65rem 1rem 0.65rem 2rem;
+          border-top-right-radius: 28px;
+          border-bottom-right-radius: 28px;
+          width: 420px;
+          // width: 90%;
+          height: 50px;
+          direction: rtl;
+
+          &::placeholder {
+            font-size: 12px;
+            color: rgba($color: $color-gray-4, $alpha: 1);
+          }
+        }
+
+        button.dolatsara__search-button {
+          position: absolute;
+          left: 0.5rem;
+          top: 12px;
+          background: transparent;
+          border: 0;
+          padding: 0;
+
+          svg.search-icon,
+          i.search-icon {
+            color: rgba($color: $color-gray-4, $alpha: 1);
+          }
+        }
+
+        button.dolatsara__instant-ads-button {
+          font-size: 14px;
+          color: rgba($color: $color-purple, $alpha: 1);
+          border: 1px solid rgba($color: $color-gray-4, $alpha: 1);
+          background: rgba($color: $color-gray-2, $alpha: 0.75);
+          padding: 0.65rem;
+          border-top-left-radius: 28px;
+          border-bottom-left-radius: 28px;
+          height: 50px;
+          // font-weight: 600;
+          width: 120px;
+        }
+      }
+    }
+
+    div.image-placeholder {
+      width: 210px;
+      height: 70px;
+      margin-bottom: 2rem;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    h2.dolatsara__title-placeholder-title {
+      color: rgba($color: $color-purple, $alpha: 1);
+      margin-bottom: 2rem;
+    }
+  }
+
+  div.dolatsara__box-icons {
+    background: rgba($color: $color-gray-2-2, $alpha: 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1.5rem;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+    a.dolatsara__icon-placehlder {
+      width: 45px;
+      height: 45px;
+      text-decoration: none;
+      color: rgba($color: $color-purple, $alpha: 1);
+      margin: 0.5rem 0.75rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &:active {
+        color: rgba($color: $color-purple, $alpha: 1);
+      }
+
+      i,
+      svg, img {
+        font-size: 24px;
+        // width: 32px;
+        // height: 32px;
+        max-width: 32px;
+        max-height: 32px;
+      }
+    }
+  }
+}
+
 section.dolatsara-slider-section {
   @include section-style;
   margin: 0;
