--- a/src/css/common.css
+++ b/src/css/common.css
@@ -55,7 +55,9 @@ button.view-all {
   width: 140px;
   font-family: "Samim";
   margin: 2rem 0;
-  font-size: 90%;
+  font-size: 15px;
+  width: 167px;
+  height: 36px;
 }
 
 section.single-advertising-section {
@@ -157,8 +159,8 @@ div.swiper-button-next {
   -webkit-box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
           box-shadow: 0 0 8px 2px rgba(62, 63, 63, 0.5);
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
+  width: 52px;
+  height: 52px;
   color: #4a1f61;
 }
 
