--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,7 +9,9 @@ button.view-all {
   width: 140px;
   font-family: "Samim";
   margin: 2rem 0;
-  font-size: 90%;
+  font-size: 15px;
+  width: 167px;
+  height: 36px;
 }
 
 section.single-advertising-section {
@@ -91,8 +93,8 @@ div.swiper-button-next {
   background-color: rgba($color: $color-light, $alpha: 1);
   box-shadow: 0 0 8px 2px rgba($color: $color-gray-3, $alpha: 0.5);
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
+  width: 52px;
+  height: 52px;
   color: rgba($color: $color-purple, $alpha: 1);
 
   &:after {
