--- a/src/scss/dolatsara.scss
+++ b/src/scss/dolatsara.scss
@@ -15,6 +15,7 @@ section.dolatsara__main-header {
     justify-content: center;
     width: 100%;
     padding: 1rem;
+    margin-bottom: 150px;
 
     div.dolatsar__seacrh-tabs {
       height: 25px;
