--- a/src/css/dolatsara.css
+++ b/src/css/dolatsara.css
@@ -83,6 +83,7 @@ section.dolatsara__main-header div.dolatsara__main-content {
           justify-content: center;
   width: 100%;
   padding: 1rem;
+  margin-bottom: 150px;
 }
 
 section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-tabs {
