submit search form

--- a/src/css/mediaDolatsara.css
+++ b/src/css/mediaDolatsara.css
@@ -15,17 +15,17 @@
 }
 
 html ::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
 }
 
 html ::-webkit-scrollbar-thumb {
-  background: rgba(151, 151, 151, 0.2);
+  background: rgba(62, 63, 63, 0.2);
   border-radius: 10px;
 }
 
 html ::-webkit-scrollbar-thumb:hover {
-  background: rgba(151, 151, 151, 0.75);
+  background: rgba(62, 63, 63, 0.5);
 }
 
 body {
@@ -47,6 +47,9 @@ body .container-fluid {
 }
 
 @media (max-width: 991px) {
+  section.dolatsara__main-header div.dolatsara__main-content div.dolatsar__seacrh-tabs {
+    display: none;
+  }
   section.dolatsara-slider-section {
     padding: 0 1rem;
     width: calc(100% - 2rem);
@@ -212,7 +215,7 @@ body .container-fluid {
   }
   section.dropdown-section ul.dropdown-section__list a.dropdown-section__list-item-link {
     background-color: #eeeeee;
-    padding: .5rem;
+    padding: 0.5rem;
     width: 100%;
     max-width: 100%;
     white-space: nowrap;
@@ -329,12 +332,31 @@ body .container-fluid {
 }
 
 @media (max-width: 576px) {
+  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form input.dolatsara__search-input {
+    width: 300px;
+  }
+  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__instant-ads-button {
+    width: 100px;
+    font-size: 12px;
+  }
+  section.dolatsara__main-header div.dolatsara__box-icons {
+    padding: 1rem 0;
+  }
   section.best-categorie-icon .icon-box-parent .icon-box {
     width: 45px;
     height: 45px;
   }
   section.best-categorie-icon .icon-box-parent .icon-box .icon-category {
     font-size: 1rem;
+  }
+}
+
+@media (max-width: 425px) {
+  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form input.dolatsara__search-input {
+    width: 200px;
+  }
+  section.dolatsara__main-header div.dolatsara__main-content div.dolatsara__forms-box form button.dolatsara__instant-ads-button {
+    width: 80px;
   }
 }
 /*# sourceMappingURL=mediaDolatsara.css.map */
