--- a/src/scss/dolatsaraMenu.scss
+++ b/src/scss/dolatsaraMenu.scss
@@ -258,9 +258,10 @@ header.dolatsara__menu {
                   color: rgba($color: $color-dark, $alpha: 1);
                 }
 
-                svg {
-                  width: 50px;
-                  height: 50px;
+                svg, i , img {
+                  max-width: 50px;
+                  max-height: 50px;
+                  font-size: 32px;
                   color: rgba($color: $color-purple, $alpha: 1);
                 }
               }
